fix the extra padding header-wrapper was adding to search-wrapper

--- a/frontend/packages/volto-light-theme/src/theme/_header.scss
+++ b/frontend/packages/volto-light-theme/src/theme/_header.scss
@@ -184,7 +184,6 @@
               padding-bottom: 0.5rem;
               border-bottom: 2px solid $black;
               border-left: none;
-              margin-left: 12.6rem;
 
               @media only screen and (max-width: $tablet-breakpoint) {
                 padding-top: 2rem;
